--- a/public/login.html
+++ b/public/login.html
@@ -26,11 +26,8 @@
     const username = document.getElementById('username').value;
     const password = document.getElementById('password').value;
 
-    fetch('/login', {
+    ajax('/login', {
       method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
       body: JSON.stringify({ username, password })
     }).then(res => res.json())
       .then(data => {
