--- a/public/login.html
+++ b/public/login.html
@@ -26,14 +26,16 @@
     const username = document.getElementById('username').value;
     const password = document.getElementById('password').value;
 
-    ajax('/login', {
+    ajax('/api/login', {
       method: 'POST',
       body: JSON.stringify({ username, password })
     }).then(res => res.json())
       .then(data => {
         if (data.accessToken) {
           localStorage.setItem('accessToken', data.accessToken);
-          window.location.href = '/index.html';
+          localStorage.setItem('userId', data.userId);
+          localStorage.setItem('userName', data.userName);
+          window.location.href = '/';
         } else {
           alert('Login failed');
         }
