--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -6,6 +6,7 @@
   <script src="/scripts/utils.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/global.css">
   <title>Rage Against Christmas</title>
 
   <script>
