--- a/public/problem.html
+++ b/public/problem.html
@@ -6,20 +6,32 @@
   <script src="/scripts/utils.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/global.css">
   <title>Rage Against Christmas</title>
+  <style type="text/css" media="screen">
+    #editor {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
+  </style>
 </head>
 
-<body x-data="{ data: {}, ready: false }" x-init="await getProblem(data); ready = true;">
+<body x-data="{ data: {}, ready: false }" x-init="await getProblem(data); ready = true; loadEditor()">
   <a href="/">Volver</a>
-  <template x-if="ready">
-    <div>
+  <div style="display: grid; grid-template-columns: 1fr 1fr;height: 100%;">
+    <template x-if="ready">
+      <div>
+        <div x-data="problem = data.problem">
+          <h1 x-text=" problem.title">
+          </h1>
+          <p x-html="problem.content" style="white-space: pre-line;"></p>
+          <p x-html="problem.input" style="white-space: pre-line;"></p>
+          <label>Codigo >></label>
+        </div>
 
-      <div x-data="problem = data.problem">
-        <h1 x-text="problem.title"></h1>
-        <p x-html="problem.content" style="white-space: pre-line;"></p>
-        <p x-html="problem.input" style="white-space: pre-line;"></p>
-        <label>Codigo >></label>
-        <textarea id="code"></textarea>
         <button @click="submitProblem()">enviar</button>
       </div>
       <div x-data="submissions = data.submissions">
@@ -34,41 +46,62 @@
           </div>
         </template>
       </div>
-    </div>
+  </div>
   </template>
+
+  <aside style="position: relative;">
+
+    <div id="editor"></div>
+  </aside>
+
+
+
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.43.3/ace.js" type="text/javascript"
+    charset="utf-8"></script>
+  <script>
+    function loadEditor() {
+      var editor = ace.edit("editor");
+      editor.setTheme("ace/theme/monokai");
+      editor.session.setMode("ace/mode/javascript");
+      editor.setValue(`function main(input) {
+      // your code here
+}
+`)
+      editor.clearSelection();
+    }
+
+    function getProblemId() {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get('problem');
+    }
+
+    async function getProblem(data) {
+      const id = getProblemId();
+      const userId = getUserId();
+      if (!userId) alert('No user id found, please login first');
+      if (!id) alert('No problem id provided in URL');
+
+      const res = await ajax(`/api/problem/${id}`).then(res => res.json());
+      const subs = await ajax(`/api/problem/${id}/submissions/${userId}`).then(res => res.json());
+      data.problem = res.problem;
+      data.submissions = subs.submissions;
+    }
+
+    async function submitProblem() {
+      const id = getProblemId();
+      const code = ace.edit("editor").getValue();
+
+      const response = await ajax(`/api/problem/${id}/submit`, {
+        method: 'POST',
+        body: JSON.stringify({ code })
+      });
+
+      const result = await response.json();
+      alert(JSON.stringify(result));
+    }
+
+  </script>
 </body>
-
-<script>
-  function getProblemId() {
-    const urlParams = new URLSearchParams(window.location.search);
-    return urlParams.get('problem');
-  }
-
-  async function getProblem(data) {
-    const id = getProblemId();
-    const userId = getUserId();
-    if (!userId) alert('No user id found, please login first');
-    if (!id) alert('No problem id provided in URL');
-
-    const res = await ajax(`/api/problem/${id}`).then(res => res.json());
-    const subs = await ajax(`/api/problem/${id}/submissions/${userId}`).then(res => res.json());
-    data.problem = res.problem;
-    data.submissions = subs.submissions;
-  }
-
-  async function submitProblem() {
-    const id = getProblemId();
-    const code = document.getElementById('code').value;
-
-    const response = await ajax(`/api/problem/${id}/submit`, {
-      method: 'POST',
-      body: JSON.stringify({ code })
-    });
-
-    const result = await response.json();
-    alert(JSON.stringify(result));
-  }
-
-</script>
 
 </html>
