--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
   <script src="./scripts/utils.js"></script>
   <link rel="stylesheet" href="./styles/global.css">
   <meta charset="UTF-8">
@@ -12,6 +13,9 @@
 
 <body x-data="{ problems: [], username: getUserName() }" x-init="await setProblems(problems)">
   <div class="navbar">
+    <div class="breadcrumbs">
+      <span>Rage against christmas</span>
+    </div>
     <span x-text="username"></span>
     <button onclick="logout()">logout</button>
   </div>
